--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ a {
 }
 .cercle {
   border: 2px solid #d9d9d9;
+  flex-shrink: 0;
   border-radius: 50%;
   width: 1.7em;
   height: 1.7em;
@@ -107,8 +108,12 @@ a {
   display: flex;
   justify-content: space-between;
 }
+.fa-chart-line {
+  color: var(--main-color);
+}
 
-.hebergements-and-populaires section {
+.hebergements,
+.populaires {
   background-color: var(--main-bg-color);
   border-radius: 20px;
   padding: 30px;
@@ -162,6 +167,9 @@ a {
 /****** Populaires ***********/
 .populaires {
   width: 32%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .populaires-title {
@@ -169,10 +177,13 @@ a {
   justify-content: space-between;
   align-items: center;
 }
-
+.populaires-cards {
+  gap: 30px;
+  flex-direction: column;
+  display: flex;
+}
 .populaires-cards .card {
   display: flex;
-  margin-top: 33px;
 }
 
 .populaires-cards img {
@@ -212,7 +223,7 @@ a {
 .logohead {
   height: 19px;
   box-sizing: content-box;
-  padding: 30px 50px;
+  padding: 30px 0;
 }
 .head1 .navmenu {
   display: flex;
@@ -263,6 +274,9 @@ a {
   border-radius: 0 15px 15px 0;
   border: none;
   padding: 15px 16px;
+}
+.btn-search-phone {
+  display: none;
 }
 .filter {
   display: flex;
@@ -367,6 +381,7 @@ a {
 
   .hebergements-and-populaires {
     flex-direction: column;
+    gap: 50px;
   }
 
   .hebergements {
@@ -375,7 +390,6 @@ a {
 
   .populaires {
     width: 100%;
-    margin-top: 50px;
   }
 
   .populaires-cards {
@@ -402,17 +416,30 @@ a {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 768px) {
+  .main-container {
+    padding: 0;
+  }
   .head1 {
     flex-direction: column;
   }
-
+  .allsearch {
+    width: 100%;
+  }
+  .areasearch {
+    width: 100%;
+  }
+  .section-search {
+    gap: 35px;
+    padding: 20px;
+  }
   .logohead {
     object-fit: contain;
   }
-  .navmenu {
+  .head1 .navmenu {
+    gap: 0;
     text-align: center;
+    border-bottom: 1px solid #f2f2f2;
   }
-
   .head1 .navlink {
     border-top: none;
     border-bottom: 2px solid transparent;
@@ -420,10 +447,97 @@ a {
     padding-top: 0;
     padding-bottom: 14px;
   }
+
+  .btn-search {
+    display: none;
+  }
+  .allsearch {
+    position: relative;
+  }
+  .btn-search-phone {
+    display: inline-flex;
+    height: 49px;
+    padding: 15px 16px;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    background-color: var(--main-color);
+    color: var(--main-bg-color);
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    right: 0;
+  }
+  .areasearch {
+    padding-right: 50px;
+  }
+  .filter {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  .filterbtn {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .buttonfilter {
+    flex: 1 1 calc(50% - 5px);
+    min-width: 160px;
+  }
   .hebergements-and-populaires {
     flex-direction: column-reverse;
+    gap: 0;
+  }
+
+  .hebergements,
+  .populaires {
+    border-radius: 0;
+    padding: 30px 20px;
+  }
+  .hebergements {
+    background-color: #ffffff;
   }
   .populaires-cards {
     flex-direction: column;
+    gap: 15px;
+  }
+  .populaires-cards a {
+    width: 100%;
+  }
+  .populaires .card {
+    width: 100%;
+  }
+  .hebergements {
+    gap: 15px;
+  }
+  .hebergements-cards {
+    flex-direction: column;
+  }
+  .activites-card {
+    padding: 30px;
+    gap: 30px;
+  }
+  .activiter {
+    flex-direction: column;
+    gap: 15px;
+  }
+  .footer-nav {
+    flex-direction: column;
+    padding: 30px;
+    gap: 50px;
+  }
+  .buttonfilter {
+    font-size: 14px;
+  }
+  .buttonfilter i {
+    font-size: 22px;
+  }
+  .populaires-cards img {
+    height: 146px;
+  }
+  .activites-img {
+    height: 141px;
   }
 }
